gitignore virtual env

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,9 @@ Cargo.lock
 # vscode
 **/.vscode
 **/.vscode/*
-#!.vscode/settings.json
-#!.vscode/tasks.json
-#!.vscode/launch.json
-#!.vscode/extensions.json
-#!.vscode/*.code-snippets
+
+# virtual env
+**/venv
+**/venv/*
+
+
